--- a/Phonetic/zh-Hans.lproj/Main.strings
+++ b/Phonetic/zh-Hans.lproj/Main.strings
@@ -7,7 +7,7 @@
 /* Class = "UILabel"; text = "Feedback"; ObjectID = "9MY-ha-kA9"; */
 "9MY-ha-kA9.text" = "反馈";
 
-/* Class = "UITableViewSection"; footerTitle = "e.g: Add a phonetic middle name key for `叶梓萱` with `YZX`. Then you can enter `YZX` to search the specific name. "; ObjectID = "9Mp-D6-ANl"; */
+/* Class = "UITableViewSection"; footerTitle = "e.g: Add a nickname key for `叶梓萱` with `YZX`. Then you can enter `YZX` to search the specific name. "; ObjectID = "9Mp-D6-ANl"; */
 "9Mp-D6-ANl.footerTitle" = "比如：为 ”叶梓萱“ 添加 ”YZX“ 字段，直接输入 “YZX” 就可以快速搜索到联系人。";
 
 /* Class = "UITableViewSection"; headerTitle = "Quick Search"; ObjectID = "9Mp-D6-ANl"; */
@@ -34,8 +34,8 @@
 /* Class = "UILabel"; text = "Version"; ObjectID = "AO5-Q6-lZ2"; */
 "AO5-Q6-lZ2.text" = "Version";
 
-/* Class = "UILabel"; text = "Middle Name for Quick Search"; ObjectID = "Buy-mD-J4T"; */
-"Buy-mD-J4T.text" = "中间名字段";
+/* Class = "UILabel"; text = "Notes for Quick Search"; ObjectID = "Buy-mD-J4T"; */
+"Buy-mD-J4T.text" = "备注字段";
 
 /* Class = "UILabel"; text = "⬇︎"; ObjectID = "DwT-Qb-X56"; */
 "DwT-Qb-X56.text" = "⬇︎";
@@ -46,8 +46,8 @@
 /* Class = "UILabel"; text = "Status"; ObjectID = "EqW-Dx-MRg"; */
 "EqW-Dx-MRg.text" = "状态";
 
-/* Class = "UILabel"; text = "Middle Name Phonetic Keys"; ObjectID = "FYS-C4-a9Y"; */
-"FYS-C4-a9Y.text" = "中间名字段";
+/* Class = "UILabel"; text = "Notes Phonetic Keys"; ObjectID = "FYS-C4-a9Y"; */
+"FYS-C4-a9Y.text" = "备注字段";
 
 /* Class = "UITableViewSection"; footerTitle = "If the device language is not Chinese, the switch will be forced open."; ObjectID = "KMY-XD-2W9"; */
 "KMY-XD-2W9.footerTitle" = "用于英文系统下通讯录排序。如果设备的语言不是中文，开关将被强制打开。";
@@ -68,7 +68,7 @@
 "QL3-2P-rln.text" = "⬇︎";
 
 /* Class = "UILabel"; text = "Phonetic First & Last Name"; ObjectID = "RLV-Dq-gbJ"; */
-"RLV-Dq-gbJ.text" = "姓 & 名字段";
+"RLV-Dq-gbJ.text" = "姓 & 名拼音";
 
 /* Class = "UILabel"; text = "Mail, Contacts, Calendars"; ObjectID = "Rn2-9L-hlr"; */
 "Rn2-9L-hlr.text" = "邮件、通讯录、日历";
@@ -93,6 +93,9 @@
 
 /* Class = "UILabel"; text = "Nickname Phonetic Keys"; ObjectID = "cQ4-Cq-q6G"; */
 "cQ4-Cq-q6G.text" = "昵称字段";
+
+/* Class = "UILabel"; text = "Nickname Phonetic Keys"; ObjectID = "mp6-Au-kB1"; */
+"mp6-Au-kB1.text" = "中间名字段";
 
 /* Class = "UILabel"; text = "     [ Ye Zixuan ] ➟ [ Ye ZiXuan ]"; ObjectID = "eAK-1G-Uea"; */
 "eAK-1G-Uea.text" = "     [ Ye Zixuan ] ➟ [ Ye ZiXuan ]";
@@ -166,4 +169,8 @@
 /* Class = "UILabel"; text = "Always Separate Pinyin"; ObjectID = "DR7-JE-aLH.text"; */
 "DR7-JE-aLH.text" = "总是隔开拼音";
 
+/* Class = "UILabel"; text = "For Company Key"; ObjectID = "qTG-dC-h2X.text"; */
+"qTG-dC-h2X.text" = "用于公司字段";
 
+/* Class = "UILabel"; text = "I Want to Donate"; ObjectID = "391-Dy-SYl.text"; */
+"391-Dy-SYl.text" = "我想捐赠";
