--- a/Phonetic/zh-Hant.lproj/Localizable.strings
+++ b/Phonetic/zh-Hant.lproj/Localizable.strings
@@ -1,3 +1,6 @@
+
+"SharePhoneticContacts" = "Phonetic Contacts - 拼音首字母快速搜尋連絡人，英文系統下中文名排序";
+
 /* */
 "OK" = "好";
 
@@ -12,6 +15,12 @@
 
 /* navigation item title - About */
 "About" = "關於";
+
+/* No comment provided by engineer. */
+"Back" = "返回";
+
+/* SettingsNavigationController title - Polyphonic Chararcters */
+"Polyphonic Characters" = "多音字";
 
 /* SettingsNavigationController title - Additional Settings */
 "Additional Settings" = "更多設置";
@@ -31,7 +40,7 @@
 "Cancel" = "取消";
 
 /* Table view header title */
-"Clean Phonetic Keys" = "清除通訊錄欄位";
+"Clean Contacts Keys" = "清除通訊錄欄位";
 
 /* UIAlertAction title - clean all phonetic keys */
 "Clean" = "清除";
@@ -47,6 +56,9 @@
 
 /* No comment provided by engineer. */
 "Nickname" = "昵称欄位";
+
+/* No comment provided by engineer. */
+"Middle Name" = "中間名字段";
 
 /* No comment provided by engineer. */
 "Social Profiles" = "社交资料欄位";
@@ -73,7 +85,7 @@
 "Keep `Settings Window` open after dismissing `Additional Settings Window`." = "“更多設置窗口”關閉後保持“設置窗口”開啟。";
 
 /* No comment provided by engineer. */
-"Middle Name" = "中間名欄位";
+"Notes" = "附註欄位";
 
 /* No comment provided by engineer. */
 "Off" = "關";
@@ -131,7 +143,11 @@
 "e.g: Add a phonetic Nickname / %@ key for `叶梓萱` with `YZX`. Then you can enter `YZX` to search the specific name." = "比如：為 “葉梓萱” 添加 “YZ​​X” 的暱稱或%@，直接輸入 “YZX” 就可以快速搜索到聯繫人。";
 
 /* Table view footer title */
-"⚠️ Be Careful. All of those keys including you manually added before will be removed!「Select keys you want to delete and go back to Main Interface, Long Press to clean」" = "⚠️ 請注意！包括之前手動添加的字段都將被清除掉。「選擇需要刪除的欄位，回到主界面，長按執行按鈕來清除」";
+"Be Careful. All of those keys including you manually added before will be removed!「Select keys you want to delete and go back to Main Interface, Long Press to clean」" = "請注意！包括之前手動添加的字段都將被清除掉。「選擇需要刪除的欄位，回到主界面，長按執行按鈕來清除」";
+
+"Please Note" = "請注意";
+"Only for contact which has company key but no name." = "僅用於只有公司名但沒有名字的聯繫人。";
+"The company key will be automatically copied as a given name, then generating the Phonetic Given Name for sorting and the Quick Search key for searching." = "公司名欄位將被自動複製作為聯繫人名字，然後自動生成用於排序的拼音以及用於快速搜索的拼音首字母";
 
 /* UIAlertController message */
 "Please tap the yellow button to complete settings. This message is only displayed once!" = "請點擊黃色按鈕來完成設置。本條消息只顯示一次！";
@@ -186,19 +202,18 @@
 // 3D Touch items
 
 "Add Phonetic Keys" = "添加拼音欄位";
-"Clean Phonetic Keys" = "清除拼音欄位";
 
 
 "Animation Stopped..." = "動畫已停止...";
 
 
-// MARK: - Walkthrough
+// Walkthrough
 
 "Tutorial" = "引導";
 "Skip" = "跳過";
 
 "Access Contacts" = "訪問通訊錄";
-"Contacts permission is required." = "通訊錄權限是必要的";
+"Contacts permission is required." = "Phonetic Contacts 需要寫入拼音字段到你的通訊錄以便排序。";
 "Push Notification" = "推送通知";
 "Once the mission completed, you'll receive Notification." = "當任務完成時，你將收到通知提醒";
 "Choose a key for Quick Search. Default is「Nickname Key」." = "選擇一個欄位用於快速搜索，默認為「暱稱欄位」";
@@ -206,3 +221,38 @@
 "Tap the Settings icon to configure." = "點擊設置圖標來配置";
 "Ready to Go" = "準備就緒";
 "Get Started" = "開始";
+
+
+// Whitelist
+
+"Whitelists" = "白名單";
+"All" = "全部";
+"Search" = "搜索";
+"Remove All Whitelists" = "移除所有白名單";
+"TotalContacts" = "項聯絡資訊";
+"WhitelistTotalContacts" = "個白名單";
+"No Contacts" = "無聯絡資訊";
+"No Whitelists" = "無白名單";
+"Tips" = "提示";
+"WhitelistInfo" = "☆  白名單是全局的，意味著 Phonetic 的所有功能都會直接過濾掉你添加的白名單。\n\n☆  一旦你添加了姓氏和名字拼音，這些也將顯示在這裡，並且可以用它們來搜索白名單。同理快速搜索欄位也是。";
+
+
+// Modify Contact
+
+"Phonetic last name" = "姓氏拼音";
+"Phonetic first name" = "名字拼音";
+"No key for Quick Search" = "沒有設置用於快速搜索的字段";
+"Quick search key" = "快速搜索欄位";
+
+
+//
+"User of iOS 10+ needs to locate it manually." = "iOS 10+ 的用戶需要手動定位設置";
+
+"Contacts" = "聯絡資訊";
+
+// Choose Custom Language
+"Choose Language" = "選擇語言";
+"Automatic" = "跟隨系統";
+"English" = "英文";
+"Simplified Chinese" = "簡體中文";
+"Traditional Chinese" = "繁體中文";
